# openpose_ros_visualization

./: README.md
openpose_ros_msgs/msg/: PersonDetection.msg  PersonDetection_3d.msg
openpose_ros_pkg/: CMakeLists.txt
openpose_ros_pkg/src/: openpose_ros_node_3d.cpp
skeleton_extract_3d/: CMakeLists.txt  package.xml
skeleton_extract_3d/launch/: openpose_skeleton_extract.launch
skeleton_extract_3d/src/: skeleton_extract_3d_node.cpp  skeleton_extract_3d_node_test.cpp  skeleton_extract_3d_visualization_node.cpp
